--- a/html-css/module-01-02/index.html
+++ b/html-css/module-01-02/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Homework 1</title>
+    <title>Module-03</title>
 </head>
 <body>
     <header>
@@ -108,8 +108,6 @@
                             sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam 
                             aliquam quaerat voluptatem.
                         </p>
-            </article>         
-
             <button>
                 Load more
             </button>
