--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -27,35 +27,75 @@
         <main>    
         
     <!--FEATURES SECTION  -->
-            <section class="features">
-                <h1 class="main-heading ">Featured Products</h1>
-                <ul class="features-list clearfix">
-                    <li class="features-list-item product1">
-                        <a href="#">Blue tshirt <span class="price">$26</span></a>
-                    </li>
-                    <li class="features-list-item product2">
-                        <a href="#">Woman shirt <span class="price">$31</span></a>
-                    </li>
-                    <li class="features-list-item product3">
-                        <a href="#">Yellow tshirt <span class="price">$21</span></a>
-                    </li>
-                    <li class="features-list-item product4">
-                        <a href="#">Cool lingerie <span class="price">$56</span></a>
-                    </li>
-                    <li class="features-list-item product5">
-                        <a href="#">Blue tshirt <span class="price">$26</span></a>
-                    </li>
-                    <li class="features-list-item product6">
-                        <a href="#">Woman shirt <span class="price">$31</span></a>
-                    </li>
-                    <li class="features-list-item product7">
-                        <a href="#">Yellow tshirt <span class="price">$21</span></a>
-                    </li>
-                    <li class="features-list-item product8">
-                        <a href="#">Cool lingerie <span class="price">$56</span></a>
-                    </li>
-                </ul>
-            </section>
+    <section class="features">
+        <h1 class="main-heading ">Featured Products</h1>
+        <ul class="features-list clearfix">
+            <li class="features-list-item product1">
+                <a href="#">
+                    <div class="box">
+                    <p class="item">Blue tshirt</p>
+                    <p class="price">$26</p>
+                    </div>
+                </a>
+            </li>
+            <li class="features-list-item product2">
+                <a href="#" > 
+                    <div class="box">
+                    <p class="item">Woman shirt</p>
+                    <p class="price">$31</p>
+                    </div>
+                </a>
+            </li>
+            <li class="features-list-item product3">
+                <a href="#">
+                    <div class="box">
+                    <p class="item"> Yellow tshirt</p> 
+                    <p class="price">$21</p>
+                    </div>
+                </a>
+            </li>
+            <li class="features-list-item product4">
+                <a href="#">
+                    <div class="box">
+                    <p class="item"> Cool lingerie</p> 
+                    <p class="price">$56</p>
+                    </div>
+                </a>
+            </li>
+            <li class="features-list-item product5">
+                <a href="#">
+                    <div class="box">
+                    <p class="item"> Blue tshirt </p>
+                    <p class="price">$26</p>
+                    </div>
+                </a>
+            </li>
+            <li class="features-list-item product6">
+                <a href="#">
+                    <div class="box">
+                    <p class="item"> Woman shirt </p>
+                    <p class="price">$31</p>
+                    </div>
+                </a>
+            </li>
+            <li class="features-list-item product7">
+                <a href="#">
+                    <div class="box">
+                    <p class="item"> Yellow tshirt </p>
+                    <p class="price">$21</p>
+                    </div>
+                </a>
+            </li>
+            <li class="features-list-item product8">
+                <a href="#">
+                    <div class="box">
+                    <p class="item"> Cool lingerie </p>
+                    <p class="price">$56</p>
+                    </div>
+                </a>
+            </li>
+        </ul>
+    </section>
 
     <!-- BLOG SECTION -->
             <section class="blog">
