validate html hw-04 8.12.19

--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -102,21 +102,21 @@
                 <h1 class="main-heading">Latest news</h1>
                 <ul class="blog-list clearfix">
                     <li class="blog-list-item">
-                        <img class="blog-list-image" src="images/blog1.jpg" alt="blog-1" width="350px" height="260px">
+                        <img class="blog-list-image" src="images/blog1.jpg" alt="blog-1" width="350" height="260">
                         <h3 class="blog-list-heading">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean </h3>
                             <p class="blog-list-content">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
                         <button class="blog-list-button">Read More</button>   
                     </li>
                     
                     <li class="blog-list-item">
-                        <img class="blog-list-image" src="images/blog2.jpg" alt="blog-2" width="350px" height="260px">
+                        <img class="blog-list-image" src="images/blog2.jpg" alt="blog-2" width="350" height="260">
                         <h3 class="blog-list-heading">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean </h3>
                             <p class="blog-list-content">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
                         <button class="blog-list-button">Read More</button>    
                     </li>
                     
                     <li class="blog-list-item">
-                        <img class="blog-list-image" src="images/blog3.jpg" alt="blog-3" width="350px" height="260px">
+                        <img class="blog-list-image" src="images/blog3.jpg" alt="blog-3" width="350" height="260">
                         <h3 class="blog-list-heading">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean </h3>
                             <p class="blog-list-content">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
                         <button class="blog-list-button">Read More</button>     
