--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Homework-05</title>
 </head>
-<body class="container">
+<body>
 
+<div class="container">   
    <!-- HEADER -->
     <header class="page-header">
         <nav class="site-navigation clearfix">
-            <a href="#" ><p class="site-logo">Mart</p></a>
+            <a href="#" class="site-logo">Mart</a>
             <ul class="site-navigation-list">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About us</a></li>
@@ -54,13 +55,10 @@
                     <div class="modal-backdrop">
                             <div class="modal clearfix">
                                 <button class="modal-button like"> 
-                                    <img src="img/icon/icon-like.png" alt="Like"> 
                                 </button>
                                 <button class="modal-button mix">
-                                    <img src="img/icon/icon-mix.png" alt="Mix">
                                 </button>
                                 <button class="modal-button time">
-                                    <img src="img/icon/icon-time .png" alt="Time">
                                 </button>
                                 <button class="modal-button add">Add to cart</button>
                             </div>
@@ -77,13 +75,10 @@
                     <div class="modal-backdrop">
                             <div class="modal clearfix">
                                 <button class="modal-button like"> 
-                                    <img src="img/icon/icon-like.png" alt="Like"> 
                                 </button>
                                 <button class="modal-button mix">
-                                    <img src="img/icon/icon-mix.png" alt="Mix">
                                 </button>
                                 <button class="modal-button time">
-                                    <img src="img/icon/icon-time .png" alt="Time">
                                 </button>
                                 <button class="modal-button add">Add to cart</button>
                             </div>
@@ -100,13 +95,10 @@
                     <div class="modal-backdrop">
                             <div class="modal clearfix">
                                 <button class="modal-button like"> 
-                                    <img src="img/icon/icon-like.png" alt="Like"> 
                                 </button>
                                 <button class="modal-button mix">
-                                    <img src="img/icon/icon-mix.png" alt="Mix">
                                 </button>
                                 <button class="modal-button time">
-                                    <img src="img/icon/icon-time .png" alt="Time">
                                 </button>
                                 <button class="modal-button add">Add to cart</button>
                             </div>
@@ -123,13 +115,10 @@
                         <div class="modal-backdrop">
                                 <div class="modal clearfix">
                                     <button class="modal-button like"> 
-                                        <img src="img/icon/icon-like.png" alt="Like"> 
                                     </button>
                                     <button class="modal-button mix">
-                                        <img src="img/icon/icon-mix.png" alt="Mix">
                                     </button>
                                     <button class="modal-button time">
-                                        <img src="img/icon/icon-time .png" alt="Time">
                                     </button>
                                     <button class="modal-button add">Add to cart</button>
                                 </div>
@@ -143,11 +132,10 @@
 
     <!-- FOOTER -->
     <footer class="page-footer">
-        <ul class="footer-list">
-            <li class="footer-list-item">All Rights Reserved © Dokan</li>
-            <li class="footer-list-item">Designed <a class="footer-link" href="#">ThemenGraph</a></li>
-        </ul>  
+            <p class="footer-item">All Rights Reserved © Dokan</p>
+            <p class="footer-item">Designed <a class="footer-link" href="#">ThemenGraph</a></p> 
     </footer>
+</div> 
 
 </body>
 </html>
