hw5 anotherone attempt 14.12.20

--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Homework-05</title>
 </head>
 <body>
 
-<div class="container">   
+<!-- <div class="container"> -->
    <!-- HEADER -->
     <header class="page-header">
         <nav class="site-navigation clearfix">
@@ -27,7 +28,7 @@
 
     <!-- MAIN -->
     <main>
-
+    <div class="container">
     <!-- SLIDER -->
         <section class="slider">
             <button class="slider-ctrl slider-ctrl-prev"></button>
@@ -127,7 +128,7 @@
 
             </ul>
         </section>
-    
+    </div>
     </main>
 
     <!-- FOOTER -->
@@ -135,7 +136,7 @@
             <p class="footer-item">All Rights Reserved © Dokan</p>
             <p class="footer-item">Designed <a class="footer-link" href="#">ThemenGraph</a></p> 
     </footer>
-</div> 
+<!-- </div> -->
 
 </body>
 </html>
