--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -25,14 +25,17 @@
   <!-- MAIN -->
     <main>
         <section class="features">
-            <h3 class="prescription">We work with</h3>
-            <h2 class="section-name">Amazing services</h2>
+            <!-- <span class="prescription">We work with</span> -->
+            <h2 class="section-name">
+                <span class="prescription">We work with</span><br>
+                Amazing services
+            </h2>
 
 
             <ul class="features-list container">
                 <li class="features-list-item">
                     <div class="box alarm">
-                    <h5 class="item-name">Photography</h5>
+                    <h3 class="item-name">Photography</h3>
                     <p class="item-about">Lorem ipsum dolor 
                         sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor.</p>
@@ -40,7 +43,7 @@
                 </li>
                 <li class="features-list-item">
                     <div class="box line-graph">
-                    <h5 class="item-name">Web design</h5>
+                    <h3 class="item-name">Web design</h3>
                     <p class="item-about">Lorem ipsum dolor 
                         sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor.</p>
@@ -48,7 +51,7 @@
                 </li>
                 <li class="features-list-item">
                         <div class="box comp-ok">
-                    <h5 class="item-name">Creativity</h5>
+                    <h3 class="item-name">Creativity</h3>
                     <p class="item-about">Lorem ipsum dolor 
                         sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor.</p>
@@ -56,7 +59,7 @@
                 </li>
                 <li class="features-list-item">
                         <div class="box book">
-                    <h5 class="item-name">Seo</h5>
+                    <h3 class="item-name">Seo</h3>
                     <p class="item-about">Lorem ipsum dolor 
                         sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor.</p>
@@ -64,7 +67,7 @@
                 </li>
                 <li class="features-list-item">
                     <div class="box home">
-                    <h5 class="item-name">Css/html</h5>
+                    <h3 class="item-name">Css/html</h3>
                     <p class="item-about">Lorem ipsum dolor 
                         sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor.</p>
@@ -72,7 +75,7 @@
                 </li>
                 <li class="features-list-item">
                     <div class="box image">
-                    <h5 class="item-name">Digital</h5>
+                    <h3 class="item-name">Digital</h3>
                     <p class="item-about">Lorem ipsum dolor 
                         sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor.</p>
@@ -81,8 +84,10 @@
             </ul>
         </section>
         <section class="team container">
-            <h3 class="prescription">Who we are</h3>
-            <h2 class="section-name">Meet our team</h2>
+            <h2 class="section-name">
+                <span class="prescription">Who we are</span><br>
+                Meet our team
+            </h2>
             <p class="team-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
             veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
             <ul class="team-list">
@@ -100,7 +105,7 @@
                             </div>
                         </div>        
                     </div>                      
-                    <h4 class="teammate">Mattehew Dix</h4>
+                    <h3 class="teammate">Mattehew Dix</h3>
                     <p class="occupation">Graphic Design</p>
                 </li>
                 <li class="team-list-item">
@@ -117,7 +122,7 @@
                             </div>
                         </div>        
                     </div>                      
-                    <h4 class="teammate">Christopher Campbell</h4>
+                    <h3 class="teammate">Christopher Campbell</h3>
                     <p class="occupation">Branding/UX design</p>
                 </li>
                 <li class="team-list-item">
@@ -134,7 +139,7 @@
                             </div>
                         </div>        
                     </div>  
-                    <h4 class="teammate">Michael Fertig</h4>
+                    <h3 class="teammate">Michael Fertig</h3>
                     <p class="occupation">Developer</p>
                 </li>
             </ul>
