--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -33,53 +33,43 @@
 
 
             <ul class="features-list container">
-                <li class="features-list-item">
-                    <div class="box alarm">
+                <li class="features-list-item alarm">
+                    
                     <h3 class="item-name">Photography</h3>
                     <p class="item-about">Lorem ipsum dolor 
                         sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor.</p>
-                    </div>
+
                 </li>
-                <li class="features-list-item">
-                    <div class="box line-graph">
+                <li class="features-list-item line-graph">
                     <h3 class="item-name">Web design</h3>
                     <p class="item-about">Lorem ipsum dolor 
                         sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor.</p>
-                    </div>
                 </li>
-                <li class="features-list-item">
-                        <div class="box comp-ok">
+                <li class="features-list-item comp-ok">
                     <h3 class="item-name">Creativity</h3>
                     <p class="item-about">Lorem ipsum dolor 
                         sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor.</p>
-                    </div>
                 </li>
-                <li class="features-list-item">
-                        <div class="box book">
+                <li class="features-list-item book">
                     <h3 class="item-name">Seo</h3>
                     <p class="item-about">Lorem ipsum dolor 
                         sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor.</p>
-                    </div>
                 </li>
-                <li class="features-list-item">
-                    <div class="box home">
+                <li class="features-list-item home">
                     <h3 class="item-name">Css/html</h3>
                     <p class="item-about">Lorem ipsum dolor 
                         sit amet, consectetur adipiscing elit, 
-                        sed do eiusmod tempor.</p>
-                    </div>    
+                        sed do eiusmod tempor.</p>  
                 </li>
-                <li class="features-list-item">
-                    <div class="box image">
+                <li class="features-list-item image">
                     <h3 class="item-name">Digital</h3>
                     <p class="item-about">Lorem ipsum dolor 
                         sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor.</p>
-                    </div>
                 </li>
             </ul>
         </section>
