hw7 15.01 without footer

--- a/html-css/module-07/index.html
+++ b/html-css/module-07/index.html
@@ -56,25 +56,24 @@
                 </li>
             </ul>
         </section>
-    </main>
-
-    <footer class="page-footer">
-        <h2 class="title">Contact us</h2>
-        <p class="title-about">Proin iaculis purus consequat sem cure. </p>
-        <form action="#" class="contact-form container">
-          <div class="contact-group">
-              <div class="form-group">
-                <input type="text" name="name" class="form-field" placeholder="Your name*" required>
-                <input type="email" name="email" class="form-field" placeholder="Your E-mail*" required>
-                <input type="text" name="subject" class="form-field" placeholder="subject">
-              </div>
+      <!-- CONTACT FORM -->
+        <section class="contact-section">
+            <h2 class="title">Contact us</h2>
+            <p class="title-about">Proin iaculis purus consequat sem cure. </p>
+            <form action="#" class="contact-form container">
+              <div class="contact-group">
+                  <div class="form-group">
+                    <input type="text" name="name" class="form-field" placeholder="Your name*" required>
+                    <input type="email" name="email" class="form-field" placeholder="Your E-mail*" required>
+                    <input type="text" name="subject" class="form-field" placeholder="subject">
+                  </div>
                   <div class="text-group">
                     <textarea name="#" class="form-field" id="#" cols="30" rows="10" placeholder="Your message*" required></textarea>
                   </div>
-          </div>
+              </div>
                 <button class="form-button">Send message</button>  
-        </form>
-    </footer>
-
+            </form>
+        </section>
+    </main>
   </body>
 </html>
