--- a/html-css/module-08/index.html
+++ b/html-css/module-08/index.html
@@ -12,8 +12,8 @@
     <title>Homework-08</title>
 </head>
 <body>
-    <header class="page-header container">
-        <nav class="site-navigation">
+    <header class="page-header">
+        <nav class="site-navigation container">
             <a href="#" class="site-logo">Urlaubsglück</a>
             <ul class="form">      
                 <li class="form-item">
@@ -24,7 +24,7 @@
                 </li>
             </ul>
         </nav>
-    <div class="header-content">
+    <div class="header-content container">
         <h2 class="header-title"><span class="title-block"> Share your</span> holiday dreams</h2>
         <p class="header-subtitle"> And find the partner to fullfill it</p>
         <a href="#" class="header-link">Find your holiday partner</a>
@@ -34,7 +34,7 @@
     <main>
         <section class="partners">
         <h3 class="main-title">Meet a partner for your best holiday</h3>
-        <ul class="partners-list">
+        <ul class="partners-list container">
             <li class="partners-list-item item-01">
                 <div class="img-wrapper tv-01">
                     <img class="circle" src="img/partner-1.png" alt="Bradley Hunter">
