--- a/html-css/module-09/index.html
+++ b/html-css/module-09/index.html
@@ -16,37 +16,32 @@
     <!-- HEADER START -->
         <header  class="page-header">    
             <div class="container">
-                    <div class="row">
-                        <!--SITE NAVIGATION BEGIN -->   
+                <div class="row">
+                    <!--SITE NAVIGATION BEGIN -->   
                         <div class="col-12">
-                            <nav class="site-navigation">
-                                <a href="#" class="site-logo">Urlaubsglück</a>
-                                <ul class="form">      
-                                    <li class="form-item">
-                                        <a href="#" class="form-link">Log in</a> 
-                                    </li>
-                                    <li class="form-item">
-                                        <a href="#" class="form-link">Sign up</a>   
-                                    </li>
-                                </ul>
-                            </nav>
-                        </div>
-                        <!-- SITE NAVIGATION END -->
-                        <!-- HEADER CONTENT BEGIN -->
-                        <div class="col-12">
-                            <div class="row">
-                                <div class="col-12   pt-md-5 pb-md-4">
-                                    <div class="header-content">
-                                        <h2 class="header-title"><span class="title-block"> Share your</span> holiday dreams</h2>
-                                        <p class="header-subtitle"> And find the partner to fullfill it</p>
-                                        <a href="#" class="header-link">Find your holiday partner</a>
-                                    </div>
-                                    
-                                </div>                           
+                            <div class="row site-navigation">
+                                <div class="col-md-4"><a href="#" class="site-logo">Urlaubsglück</a></div>
+                                <div class="col-md-5">
+                                    <ul class="form">
+                                        <li class="form-item"><a href="#" class="form-link">Log in</a></li>
+                                        <li class="form-item"><a href="#" class="form-link">Sign up</a> </li>
+                                    </ul>       
+                                </div>
                             </div>
                         </div>
-                         <!-- HEADER CONTENT END -->
-                    </div> 
+                    <!-- SITE NAVIGATION END -->
+                    <!-- HEADER CONTENT BEGIN -->
+                        <div class="row justify-content-center pt-md-5 pb-md-4 mx-auto">
+                            <div class="col-12 header-content">
+                                <!-- <div class="header-content"> -->
+                                    <h2 class="header-title"><span class="title-block"> Share your</span> holiday dreams</h2>
+                                    <p class="header-subtitle"> And find the partner to fullfill it</p>
+                                    <a href="#" class="header-link">Find your holiday partner</a>
+                                <!-- </div> -->
+                            </div>
+                        </div>
+                    <!-- HEADER CONTENT END -->
+                </div>
             </div>
         </header>
 
@@ -54,15 +49,17 @@
 
     <!-- MAIN START -->
     <div class="container">
-        <div class="row pt-2 pb-4">
+        <div class="row pt-4 pb-4">
+            <div class="col-12">
                 <!-- MAIN TITLE -->
-                <div class="col-12">
-                    <h3 class="main-title">Meet a partner for your best holiday</h3>  
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="main-title">Meet a partner for your best holiday</h3>  
+                    </div>
                 </div>
                 <!-- MAIN TITLE END -->
                 <!-- PARTNERS-LIST -->
-                <div class="col-12">
-                    <div class="row">
+                <div class="row">
                         <div class="col-12 mb-4 order-md-1 col-md-6 col-lg-3 mb-md-5 mb-lg-4">
                             <div class="partners">
                             <div class="img-wrapper tv-01">
@@ -99,14 +96,16 @@
                                 <p class="partners-about">Based in Chicago. I love playing tennis and loud music.</p> 
                             </div>
                         </div>    
-                    </div>
-                </div>    
-                <!-- PARTNERS-LIST END-->
+                </div>
+                <!-- PARTNERS-LIST END--> 
                 <!-- OTHER LINK -->
+                <div class="row">
                 <div class="col-12">
                     <a href="#" class="partners-link">See other partners</a>
                 </div>
+                </div>
                 <!-- OTHER LINK END -->
+            </div>
         </div>
     </div>
     <!-- MAIN END -->
