--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -124,7 +124,7 @@
                 <li class="team__item">
                     <div class="team__img--wrapper">
                         <img class="img"
-                        srcset="img/team/1-team.jpg 380w, img/team/1-team.jpg 560w"
+                        srcset="img/team/1-team.jpg 380w, img/team/1-team@2x.jpg 760w"
                         src="img/team/1-team.jpg"
                         sizes="380px" 
                         alt="Mattehew" >
@@ -145,7 +145,7 @@
                 <li class="team__item">
                     <div class="team__img--wrapper">
                         <img class="img"
-                        srcset="img/team/2-team.jpg 380w, img/team/2-team.jpg 560w"
+                        srcset="img/team/2-team.jpg 380w, img/team/2-team@2x.jpg 760w"
                         src="img/team/2-team.jpg"
                         sizes="380px"  
                         alt="Christopher" >
@@ -166,7 +166,7 @@
                 <li class="team__item">
                     <div class="team__img--wrapper">
                         <img class="img"
-                        srcset="img/team/3-team.jpg 380w, img/team/3-team.jpg 560w"
+                        srcset="img/team/3-team.jpg 380w, img/team/3-team@2x.jpg 760w"
                         src="img/team/3-team.jpg"
                         sizes="380px" 
                         alt="Michael">
