--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -75,38 +75,38 @@
     <!-- FEATURES -->
             <ul class="features__list list">
                 <li class="features__item features__item--alarm">
-                    <h3 class="features__item--name">Photography</h3>
-                    <p class="features__item--about">Lorem ipsum dolor 
+                    <h3 class="features__name">Photography</h3>
+                    <p class="features__about">Lorem ipsum dolor 
                         sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor.</p>
                 </li>
                 <li class="features__item features__item--line-graph">
-                    <h3 class="features__item--name">Web design</h3>
-                    <p class="features__item--about">Lorem ipsum dolor 
+                    <h3 class="features__name">Web design</h3>
+                    <p class="features__about">Lorem ipsum dolor 
                         sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor.</p>
                 </li>
                 <li class="features__item features__item--comp">
-                    <h3 class="features__item--name">Creativity</h3>
-                    <p class="features__item--about">Lorem ipsum dolor 
+                    <h3 class="features__name">Creativity</h3>
+                    <p class="features__about">Lorem ipsum dolor 
                         sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor.</p>
                 </li>
                 <li class="features__item features__item--book">
-                    <h3 class="features__item--name">Seo</h3>
-                    <p class="features__item--about">Lorem ipsum dolor 
+                    <h3 class="features__name">Seo</h3>
+                    <p class="features__about">Lorem ipsum dolor 
                         sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor.</p>
                 </li>
                 <li class="features__item features__item--home">
-                    <h3 class="features__item--name">Css/html</h3>
-                    <p class="features__item--about">Lorem ipsum dolor 
+                    <h3 class="features__name">Css/html</h3>
+                    <p class="features__about">Lorem ipsum dolor 
                         sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor.</p>  
                 </li>
                 <li class="features__item features__item--image">
-                    <h3 class="features__item--name">Digital</h3>
-                    <p class="features__item--about">Lorem ipsum dolor 
+                    <h3 class="features__name">Digital</h3>
+                    <p class="features__about">Lorem ipsum dolor 
                         sit amet, consectetur adipiscing elit, 
                         sed do eiusmod tempor.</p>
                 </li>
@@ -123,7 +123,7 @@
             <ul class="team__list list">
                 <li class="team__item">
                     <div class="team__img--wrapper">
-                        <img class="img"
+                        <img class="team__img"
                         srcset="img/team/1-team.jpg 380w, img/team/1-team@2x.jpg 760w"
                         src="img/team/1-team.jpg"
                         sizes="380px" 
@@ -144,7 +144,7 @@
                 </li>
                 <li class="team__item">
                     <div class="team__img--wrapper">
-                        <img class="img"
+                        <img class="team__img"
                         srcset="img/team/2-team.jpg 380w, img/team/2-team@2x.jpg 760w"
                         src="img/team/2-team.jpg"
                         sizes="380px"  
@@ -165,7 +165,7 @@
                 </li>
                 <li class="team__item">
                     <div class="team__img--wrapper">
-                        <img class="img"
+                        <img class="team__img"
                         srcset="img/team/3-team.jpg 380w, img/team/3-team@2x.jpg 760w"
                         src="img/team/3-team.jpg"
                         sizes="380px" 
